# StellAdullam

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  stellar_wave_application.md
.github/workflows/: api-ci.yml  changelog.yml  contracts-ci.yml  land-ci.yml  monorepo-ci.yml  shared-ci.yml  vercel-preview.yml  webapp-ci.yml
apps/api/: .env.example  .eslintrc.json  README.md  index.ts  package.json  test-api-err.txt  test-output.txt  tsconfig.json
apps/contracts/: README.md  deny.toml
apps/contracts/contracts/game-engine/: Cargo.toml
apps/contracts/contracts/game-engine/src/: constants.rs  cougr_core.rs  lib.rs
apps/contracts/contracts/game-property-nft/: Cargo.toml
apps/contracts/contracts/game-property-nft/src/: components.rs  cougr_compat.rs  errors.rs  events.rs  lib.rs  test.rs
apps/shared/: README.md  eslint.config.mjs  package.json  tsconfig.json
apps/stelladullam-land/: .env.example  .env.local.example  eslint.config.mjs  package.json  tsconfig.json
apps/webapp/: .env.example  .env.local.example  README.md  middleware.ts  next.config.ts  package.json  tsconfig.json  vercel.json
docs/: README.md  api-usage.md  local-setup.md
docs/api/: authentication.md  kyc-workflow.md  launch-workflows.md  minting-workflow.md  overview.md
docs/architecture/: system-architecture.md
docs/contracts/: deployment.md
docs/deployment/: deploy-contracts.md  environment-variables.md  (+1 more)
scripts/: build.sh  deploy.sh
(+388 files in other folders)
