[package]
name = "game-engine"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
game-property-nft = { path = "../game-property-nft" }
game-land-token = { path = "../game-land-token" }
