[package]
name = "game-property-nft"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "PropertyNFT Soroban contract – ownership layer for StellAdullam Land (400 tiles)"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
